--- a/todos.css
+++ b/todos.css
@@ -33,10 +33,10 @@ ul li {
   font-size:22px;
 }
 
-.completed {
+/*.completed {
   text-decoration:line-through;
   color:#eee;
-}
+}*/
 
 #add_todo{
   margin-left:10px;
