--- a/todos.css
+++ b/todos.css
@@ -49,3 +49,10 @@ ul li {
   box-shadow:0 2px 0 0 #662929;
   border-radius:4px;
 }
+
+.completed {
+
+text-decoration: line-through;
+color: white;
+
+}
